Do not init services while creating services array